tests/ui/rfcs/rfc-2396-target_feature-11/safe-calls.stderr
error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:25:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target feature: sse2
   = note: the sse2 target feature being enabled in the build configuration does not remove the requirement to list it in `#[target_feature]`

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:27:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target features: avx and bmi2

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:29:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target features: avx and bmi2

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:36:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target features: avx and bmi2

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:38:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target features: avx and bmi2

error[E0133]: call to function `avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:45:5
   |
LL |     avx_bmi2();
   |     ^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target feature: bmi2

error[E0133]: call to function `Quux::avx_bmi2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:47:5
   |
LL |     Quux.avx_bmi2();
   |     ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target feature: bmi2

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:59:15
   |
LL | const _: () = sse2();
   |               ^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target feature: sse2
   = note: the sse2 target feature being enabled in the build configuration does not remove the requirement to list it in `#[target_feature]`

error[E0133]: call to function `sse2_and_fxsr` with `#[target_feature]` is unsafe and requires unsafe function or block
  --> $DIR/safe-calls.rs:62:15
   |
LL | const _: () = sse2_and_fxsr();
   |               ^^^^^^^^^^^^^^^ call to function with `#[target_feature]`
   |
   = help: in order for the call to be safe, the context requires the following additional target features: sse2 and fxsr
   = note: the fxsr and sse2 target features being enabled in the build configuration does not remove the requirement to list them in `#[target_feature]`

error[E0133]: call to function `sse2` with `#[target_feature]` is unsafe and requires unsafe block
  --> $DIR/safe-calls.rs:67:5
   |
LL |     sse2();
   |     ^^^^^^ call to function with `#[target_feature]`
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
   = help: in order for the call to be safe, the context requires the following additional target feature: sse2
   = note: the sse2 target feature being enabled in the build configuration does not remove the requirement to list it in `#[target_feature]`
note: an unsafe function restricts its caller, but its body is safe by default
  --> $DIR/safe-calls.rs:66:1
   |
LL | unsafe fn needs_unsafe_block() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/safe-calls.rs:65:8
   |
LL | #[deny(unsafe_op_in_unsafe_fn)]
   |        ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0133`.
